--- a/README.org
+++ b/README.org
@@ -51,6 +51,12 @@ its content.
 
 ** Agosto 2023
 
+*** 26-Ago-23
++ [[https://loogle.lean-fro.org][Loogle: a search tool for Lean/Mathlib]]. #ITP #LeanProver #Mathlib
++ [[https://bit.ly/3sknl6j][My experience at the Machine-Checked Mathematics workshop]]. ~ Jana Göken. #ITP #LeanProver #Math
++ [[https://terrytao.wordpress.com/2023/08/25/yonedas-lemma-as-an-identification-of-form-and-function-the-case-study-of-polynomials/][Yoneda’s lemma as an identification of form and function: the case study of polynomials]]. ~ Terence Tao (@tao@mathstodon.xyz). #Math
++ [[https://cacm.acm.org/magazines/2023/8/274942-large-language-models/fulltext][Large Language Models]]. ~ Vinton G. Cerf #LLMs
+
 *** 25-Ago-23
 + [[https://link.springer.com/article/10.1134/S1064562423700606][The work of a mathematician as a prefiguring of mastering mathematics by students: the role of experiments]]. ~ Yu. S. Vishnyakova, A.L. Semenovb, G.B. Shabate. #Math #Teaching
 + [[https://bpb-us-w2.wpmucdn.com/voices.uchicago.edu/dist/5/3515/files/2023/07/Monograph-07.09.23.pdf][Type theory for logic and mathematics (A philosophical and mathematical introduction to type theory)]]. ~ Kevin Davey. #Logic #Math #TypeTheory
